--- a/index.html
+++ b/index.html
@@ -6,42 +6,73 @@
     <link href="./styles/output.css" rel="stylesheet" />
   </head>
   <body>
-    <nav
-      class="flex items-center justify-between flex-wrap bg-gray-800 py-[1.4rem] px-[7%] text-white"
-    >
-      <div class="flex items-center space-x-2">
-        <img
-          src="./assets/ceklis.png"
-          alt="logo"
-          class="h-15 w-15 rounded-full"
-        />
-        <span class="text-white font-semibold font-sans text-3xl"
-          >NotesDay</span
+    <nav class="bg-gray-800 py-5 px-[7%] text-white">
+      <div class="mx-auto flex justify-between items-center">
+        <!-- Logo -->
+        <div class="flex items-center space-x-2">
+          <img
+            src="./assets/ceklis.png"
+            alt="logo"
+            class="w-11 h-11 rounded-full object-contain"
+          />
+          <span class="font-semibold font-sans text-2xl">NotesDay</span>
+        </div>
+        <!-- Humberger Menu -->
+        <button
+          id="menu-toggle"
+          class="md:hidden focus:outline-none z-20"
+          aria-label="Toggle Menu"
         >
+          <svg
+            class="w-8 h-8"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+        <!-- Nav links -->
+        <ul
+          id="Menu"
+          class="flex-col text-black space-y-4 md:flex md:flex-row md:space-y-0 md:space-x-8 capitalize fixed top-0 right-0 h-full md:static md:h-auto w-2/3 md:w-auto bg-transparent md:bg-transparent transform translate-x-full md:translate-x-0 transition-transform duration-300 pt-24 md:pt-0 px-6 md:px-0"
+        >
+          <li>
+            <a
+              href="#"
+              class="text-base relative inline-block after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-blue-700 after:transition-all after:duration-300 hover:after:w-full hover:text-blue-600"
+              >home</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="text-base relative inline-block after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-blue-700 after:transition-all after:duration-300 hover:after:w-full hover:text-blue-600"
+              >about</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="text-base relative inline-block after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-blue-700 after:transition-all after:duration-300 hover:after:w-full hover:text-blue-600"
+              >project</a
+            >
+          </li>
+        </ul>
       </div>
-      <ul class="flex space-x-8">
-        <li>
-          <a
-            href="#"
-            class="text-2xl relative inline-block text-white after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-blue-700 after:transition-all after:duration-300 hover:after:w-full hover:text-blue-600"
-            >home</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
-            class="text-2xl relative inline-block text-white after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-blue-700 after:transition-all after:duration-300 hover:after:w-full hover:text-blue-600"
-            >about</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
-            class="text-2xl relative inline-block text-white after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-blue-700 after:transition-all after:duration-300 hover:after:w-full hover:text-blue-600"
-            >project</a
-          >
-        </li>
-      </ul>
     </nav>
   </body>
+  <script>
+    const toggleBtn = document.getElementById("menu-toggle");
+    const menu = document.getElementById("Menu");
+
+    toggleBtn.addEventListener("click", () => {
+      menu.classList.toggle("translate-x-full");
+    });
+  </script>
 </html>
