--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+      rel="stylesheet"
+    />
     <link href="./styles/output.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="bg-gray-800 py-5 px-[7%] text-white">
+    <nav class="border-2 border-amber-400 py-5 px-[7%] text-white"> <!--bg-gray-800-->
       <div class="mx-auto flex justify-between items-center">
         <!-- Logo -->
         <div class="flex items-center space-x-2">
@@ -40,7 +44,7 @@
         <!-- Nav links -->
         <ul
           id="Menu"
-          class="flex-col text-black space-y-4 md:flex md:flex-row md:space-y-0 md:space-x-8 capitalize fixed top-0 right-0 h-full md:static md:h-auto w-2/3 md:w-auto bg-transparent md:bg-transparent transform translate-x-full md:translate-x-0 transition-transform duration-300 pt-24 md:pt-0 px-6 md:px-0"
+          class="flex-col text-black md:text-white space-y-4 md:flex md:flex-row md:space-y-0 md:space-x-8 capitalize fixed top-0 right-0 h-full md:static md:h-auto w-2/3 md:w-auto bg-transparent md:bg-transparent transform translate-x-full md:translate-x-0 transition-transform duration-300 pt-24 md:pt-0 px-6 md:px-0"
         >
           <li>
             <a
@@ -66,7 +70,7 @@
         </ul>
       </div>
     </nav>
-  </body>
+    <section class="bg-ceklis"></section>
   <script>
     const toggleBtn = document.getElementById("menu-toggle");
     const menu = document.getElementById("Menu");
